--- a/rl-labs-nao/labs/00_setup_environment/00_setup_environment.ipynb
+++ b/rl-labs-nao/labs/00_setup_environment/00_setup_environment.ipynb
@@ -3,39 +3,97 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": "# Lab 00 \u2014 Environment Setup & Reproducibility\\nSet up Python 3.11, verify packages, and create deterministic seeds."
+      "source": [
+        "# Lab 00 — Environment Setup & Reproducibility\\nSet up Python 3.11, verify packages, and create deterministic seeds."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {},
-      "execution_count": null,
-      "outputs": [],
-      "source": "import os\nimport platform\nimport random\nfrom pathlib import Path\n\nimport numpy as np\n\nprint(f\"Python version: {platform.python_version()}\")\nprint(f\"Working directory: {os.getcwd()}\")"
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Python version: 3.11.5\n",
+            "Working directory: a:\\BRAND NEW START\\Ongoing\\Sep. 2025\\Reinforcement Learning\\rl-labs-nao\\labs\\00_setup_environment\n"
+          ]
+        }
+      ],
+      "source": [
+        "import os\n",
+        "import platform\n",
+        "import random\n",
+        "from pathlib import Path\n",
+        "\n",
+        "import numpy as np\n",
+        "\n",
+        "print(f\"Python version: {platform.python_version()}\")\n",
+        "print(f\"Working directory: {os.getcwd()}\")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {},
-      "execution_count": null,
-      "outputs": [],
-      "source": "SEED = 2024\nrandom.seed(SEED)\nnp.random.seed(SEED)\nprint(\"Seeds set!\")"
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Seeds set!\n"
+          ]
+        }
+      ],
+      "source": [
+        "SEED = 2024\n",
+        "random.seed(SEED)\n",
+        "np.random.seed(SEED)\n",
+        "print(\"Seeds set!\")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {},
-      "execution_count": null,
-      "outputs": [],
-      "source": "import matplotlib.pyplot as plt\nfrom common import plotting\n\nsteps = np.arange(20)\nvalues = np.cumsum(np.random.randn(20))\npath = plotting.save_curve(steps, values, \"Seeded Random Walk\", \"lab00_random_walk.png\")\nprint(f\"Saved figure to {path}\")"
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Saved figure to A:\\BRAND NEW START\\Ongoing\\Sep. 2025\\Reinforcement Learning\\rl-labs-nao\\labs\\00_setup_environment\\assets\\figures\\lab00_random_walk.png\n"
+          ]
+        }
+      ],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "from common import plotting\n",
+        "\n",
+        "steps = np.arange(20)\n",
+        "values = np.cumsum(np.random.randn(20))\n",
+        "path = plotting.save_curve(steps, values, \"Seeded Random Walk\", \"lab00_random_walk.png\")\n",
+        "print(f\"Saved figure to {path}\")"
+      ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "RL Labs (py311)",
+      "display_name": "mitocluster",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.11"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
